# redshift_extractor

./: .env.example  .gitignore  README.md  install.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: credential_env_migration.md
src/redshift_extractor/: __init__.py  cli.py  config.py  credentials.py  extractor.py  io.py  logging.py  secret_loader.py  tunnel.py  types.py
tests/: test_config.py  test_secret_loader.py  test_types.py
