[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redshift-extractor"
version = "0.1.0"
description = "Internal library to extract data from Amazon Redshift via SSH tunnel"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Rabbit", email = "data@company.local" }]
license = { text = "Proprietary" }

dependencies = [
  "pandas>=2.2.3",
  "psycopg2-binary>=2.9.9",
  "sshtunnel==0.4.0",
  "paramiko==3.5.0",
  "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.2",
  "ruff==0.6.9",
  "mypy==1.11.2",
]

# CLI opcional (si vas a usar cli.py)
[project.scripts]
redshift-extractor = "redshift_extractor.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["redshift_extractor*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
strict_optional = true